[gd_scene load_steps=22 format=3 uid="uid://dem54i7p1h1dq"]

[ext_resource type="Script" path="res://mobs/frog.gd" id="1_1wf3w"]
[ext_resource type="Texture2D" uid="uid://cgee6k1o1dn70" path="res://game_assets/Sunny-land-files/Sunny-land-files/Graphical Assets/sprites/frog/idle/frog-idle-1.png" id="1_p36lt"]
[ext_resource type="Texture2D" uid="uid://c4mvtht48wtbn" path="res://game_assets/Sunny-land-files/Sunny-land-files/Graphical Assets/spritesheets/enemy-deadth.png" id="2_4dhht"]
[ext_resource type="Texture2D" uid="uid://b2bt42fb141sf" path="res://game_assets/Sunny-land-files/Sunny-land-files/Graphical Assets/sprites/frog/idle/frog-idle-2.png" id="2_h5jvm"]
[ext_resource type="Texture2D" uid="uid://cuolaxvclubxt" path="res://game_assets/Sunny-land-files/Sunny-land-files/Graphical Assets/sprites/frog/idle/frog-idle-3.png" id="3_eqrfb"]
[ext_resource type="Texture2D" uid="uid://cuoxxhp1ty5xs" path="res://game_assets/Sunny-land-files/Sunny-land-files/Graphical Assets/sprites/frog/idle/frog-idle-4.png" id="4_mcto1"]
[ext_resource type="Texture2D" uid="uid://bo3446ucctubd" path="res://game_assets/Sunny-land-files/Sunny-land-files/Graphical Assets/spritesheets/frog-jump.png" id="5_xfrwr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cfwdl"]
size = Vector2(18, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_ielni"]
atlas = ExtResource("2_4dhht")
region = Rect2(0, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_maxv3"]
atlas = ExtResource("2_4dhht")
region = Rect2(40, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5lr7"]
atlas = ExtResource("2_4dhht")
region = Rect2(80, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_4lg4w"]
atlas = ExtResource("2_4dhht")
region = Rect2(120, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0lrx"]
atlas = ExtResource("2_4dhht")
region = Rect2(160, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0qc2"]
atlas = ExtResource("2_4dhht")
region = Rect2(200, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_xk5ru"]
atlas = ExtResource("5_xfrwr")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dskc"]
atlas = ExtResource("5_xfrwr")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnvan"]
atlas = ExtResource("5_xfrwr")
region = Rect2(70, 0, 35, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_p5q7v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ielni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_maxv3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5lr7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4lg4w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0lrx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0qc2")
}],
"loop": false,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 10.0,
"texture": ExtResource("1_p36lt")
}, {
"duration": 1.0,
"texture": ExtResource("2_h5jvm")
}, {
"duration": 1.0,
"texture": ExtResource("3_eqrfb")
}, {
"duration": 1.0,
"texture": ExtResource("4_mcto1")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xk5ru")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dskc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnvan")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_e7mlt"]
radius = 275.116

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ojxck"]
size = Vector2(15, 16.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vn8mg"]
size = Vector2(25, 10)

[node name="frog" type="CharacterBody2D"]
script = ExtResource("1_1wf3w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 1.5)
shape = SubResource("RectangleShape2D_cfwdl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -3)
sprite_frames = SubResource("SpriteFrames_p5q7v")
animation = &"jump"
frame_progress = 0.637639

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
visible = false
shape = SubResource("CircleShape2D_e7mlt")

[node name="KillFrog" type="Area2D" parent="."]

[node name="KillFrog" type="CollisionShape2D" parent="KillFrog"]
position = Vector2(-0.5, -0.75)
shape = SubResource("RectangleShape2D_ojxck")

[node name="PlayerCollision" type="Area2D" parent="."]

[node name="PlayerCollision" type="CollisionShape2D" parent="PlayerCollision"]
position = Vector2(-0.5, 3)
shape = SubResource("RectangleShape2D_vn8mg")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="KillFrog" to="." method="_on_kill_frog_body_entered"]
[connection signal="body_entered" from="PlayerCollision" to="." method="_on_player_collision_body_entered"]
